# cooperation-scaling

./: .gitignore  LICENSE  README.md  pyproject.toml  run_experiments.bash
cooperation_scaling/: analysis.py  game.py  main.py  main_noisy.py  power_law.py  prefetch_models.py  prompts.py
data/: failed_games.csv  failed_games_noisy.csv  failed_games_noisy_2.csv  failed_games_noisy_3.csv  games.csv  games_noisy.csv  games_noisy_2.csv  games_noisy_3.csv
