[tool.poetry]
name = "cooperation-scaling"
version = "0.1.0"
description = ""
authors = ["Agustín Covarrubias <agustin@agucova.dev>"]
readme = "README.md"
packages = [{include = "cooperation_scaling"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
transformers = "^4.35.0"
pandas = "^2.1.2"
rich = "^13.6.0"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
accelerate = "^0.24.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
